# stock-market

./: .env.docker  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: application.py  db.py
app/alembic/: env.py
app/alembic/versions/: 495cfad79266_.py  503144288eff_.py
app/cruds/: currency.py  user.py
app/models/: currency.py  user.py
app/routers/: auth.py  currency.py  user.py  utils.py
