[tool.poetry]
name = "stock-market"
version = "0.1.0"
description = ""
authors = ["Yue2u <beloleg225@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
alembic = "^1.13.1"
uvicorn = "^0.27.1"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 120
exclude = '''
/(

)/
'''
[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "alembic"]

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
